# AoC2025

./: CMakeLists.txt
inputs/: day2.txt  day5.txt
src/: main.cpp
src/days/: day1.cpp  day1.h  day2.cpp  day2.h  day3.cpp  day3.h  day4.cpp  day4.h  day5.cpp  day5.h  day6.cpp  day6.h  files.h
